@@ -69,6 +69,7 @@ public class StringDict {
     }
   }
 
+
   /**
    * @nowebref
    */
@@ -83,6 +84,29 @@ public class StringDict {
       indices.put(keys[i], i);
     }
   }
+
+
+  /**
+   * Constructor to allow (more intuitive) inline initialization, e.g.:
+   * <pre>
+   * new StringDict(new String[][] {
+   *   { "key1", "value1" },
+   *   { "key2", "value2" }
+   * });
+   * </pre>
+   * It's no Python, but beats a static { } block with HashMap.put() statements.
+   */
+  public StringDict(String[][] pairs) {
+    count = pairs.length;
+    this.keys = new String[count];
+    this.values = new String[count];
+    for (int i = 0; i < count; i++) {
+      keys[i] = pairs[i][0];
+      values[i] = pairs[i][1];
+      indices.put(keys[i], i);
+    }
+  }
+
 
   /**
    * @webref stringdict:method
@@ -246,16 +270,24 @@ public class StringDict {
     return values[index];
   }
 
+
+  public String get(String key, String alternate) {
+    int index = index(key);
+    if (index == -1) return alternate;
+    return values[index];
+  }
+
+
   /**
    * @webref stringdict:method
    * @brief Create a new key/value pair or change the value of one
    */
-  public void set(String key, String amount) {
+  public void set(String key, String value) {
     int index = index(key);
     if (index == -1) {
-      create(key, amount);
+      create(key, value);
     } else {
-      values[index] = amount;
+      values[index] = value;
     }
   }
 
@@ -279,7 +311,7 @@ public class StringDict {
       keys = PApplet.expand(keys);
       values = PApplet.expand(values);
     }
-    indices.put(key, new Integer(count));
+    indices.put(key, Integer.valueOf(count));
     keys[count] = key;
     values[count] = value;
     count++;
@@ -325,8 +357,8 @@ public class StringDict {
     keys[b] = tkey;
     values[b] = tvalue;
 
-    indices.put(keys[a], new Integer(a));
-    indices.put(keys[b], new Integer(b));
+    indices.put(keys[a], Integer.valueOf(a));
+    indices.put(keys[b], Integer.valueOf(b));
   }
 
 
@@ -425,6 +457,13 @@ public class StringDict {
       writer.println(keys[i] + "\t" + values[i]);
     }
     writer.flush();
+  }
+
+
+  public void print() {
+    for (int i = 0; i < size(); i++) {
+      System.out.println(keys[i] + " = " + values[i]);
+    }
   }
 
 
